# parallel_computing_tasks

client_drone/: .cproject  .project
client_drone/src/: CMakeLists.txt  client_drone.cpp
coroutines/: .cproject  .project
coroutines/src/: coroutines.cpp
coroutines_bank_account/: .cproject  .project
coroutines_bank_account/src/: coroutines_bank_account.cpp
coroutines_multiplexer/: .cproject  .project
coroutines_multiplexer/src/: coroutines_multiplexer.cpp
industrial_equipment_telemetry_analysis/: .cproject  .project  telemetry_output.csv
industrial_equipment_telemetry_analysis/src/: CMakeLists.txt  industrial_equipment_telemetry_analysis.cpp
server_drone/: .cproject  .project
server_drone/src/: server_drone.cpp
